crates/rudy-dwarf/src/types/snapshots/std_type_detection-2.snap
---
source: crates/rudy-dwarf/src/types/resolution.rs
expression: ty
snapshot_kind: text
---
Std(
    Vec(
        VecLayout {
            length_offset: 16,
            data_ptr_offset: 8,
            inner_type: Primitive(
                Int(
                    IntLayout {
                        size: 4,
                    },
                ),
            ),
        },
    ),
)
