crates/rudy-dwarf/src/types/snapshots/std_type_detection-3.snap
---
source: crates/rudy-dwarf/src/types/resolution.rs
expression: ty
snapshot_kind: text
---
Std(
    Map(
        MapLayout {
            key_type: Std(
                String(
                    StringLayout(
                        VecLayout {
                            length_offset: 16,
                            data_ptr_offset: 8,
                            inner_type: Primitive(
                                UnsignedInt(
                                    UnsignedIntLayout {
                                        size: 1,
                                    },
                                ),
                            ),
                        },
                    ),
                ),
            ),
            value_type: Primitive(
                Int(
                    IntLayout {
                        size: 4,
                    },
                ),
            ),
            variant: HashMap {
                bucket_mask_offset: 8,
                ctrl_offset: 0,
                items_offset: 24,
                pair_size: 32,
                key_offset: 0,
                value_offset: 24,
            },
        },
    ),
)
